# crawling

./: !  .gitignore  README.md  cast_data_output.txt  error_log.csv  id.csv  info.csv  linkLog.csv  minified_ticketlink.html  pyproject.toml  valid_links.csv  valid_links.txt
html_files/: 45228.html  45229.html  45230.html  45231.html  45235.html  45236.html  45237.html  45239.html  45240.html  45241.html  45242.html  45244.html  45249.html  45250.html  45252.html  45253.html  45255.html  45256.html  45257.html  45258.html  45260.html  45261.html  45263.html  45264.html  45265.html  45266.html  45267.html  45268.html  45269.html  45270.html  60850.html  60851.html  60852.html  60853.html  60854.html  60855.html  60856.html  60857.html  60858.html  60859.html  (+18 more)
src/crawling/: .raw_open_page.py.swo  .raw_open_page.py.swp  all_crawler.py  app.py  crawler.py  crawling.py  csvforming.py  datetest.py  detail_page.py  links.py  main.py  offset.py  open_page.py  open_page_url.py  openpage.py  page_down.py  raw_open_page.py  raw_ticket_page.py  raw_to_s3.py  read_s3_parsing.py  region.py  s3_to_db.py  scrap.py  test  test.py  test2.py  testing.py  utils.py  valid_links.py
src/crawling/config/: offset.ini
tests/: count.py  data.py  test.py  test_crawling.py
