[project]
name = "crawling"
version = "0.3.6"
description = "yes24 crawling save raw data"
authors = [
    {name = "sunwoo", email = "summerham22@gmail.com"},
]
dependencies = ["selenium>=4.26.1", "webdriver-manager>=4.0.2", "beautifulsoup4>=4.12.3", "boto3>=1.35.76"]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[tool.pytest.ini_options]
pythonpath = [".", "src"]
