[project]
name = "crawling"
version = "0.1.1"
description = "Default template for PDM package"
authors = [
    {name = "hahahellooo", email = "hahahello777@gmail.com"},
]
dependencies = [
    "selenium>=4.26.1",
    "beautifulsoup4>=4.12.3",
    "webdriver-manager>=4.0.2",
    "kafka-python>=2.0.2",
    "apache-airflow>=2.10.4",
    "apache-airflow-providers-amazon>=9.1.0",
]

requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pytest.ini_options]
pythonpath = [".", "src"]
